# tune_coach

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: Caddyfile  README.md  tune-coach.service
tests/: test_calibration_pick.py  test_pitch_tracker.py  test_shift_ratio.py  test_web_api.py
tune_coach/: __main__.py  app.py  audio.py  calibration.py  jianpu.py  metronome.py  pitch.py  synth.py  voice_shift.py
tune_coach/web/: __init__.py  realtime_engine.py  schemas.py  server.py  session.py
webapp/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webapp/public/: audio-worklet-processor.js
webapp/src/: App.tsx  styles.css  testSetup.ts
webapp/src/__tests__/: audioMath.test.ts  idle.test.ts  keypad.test.ts  pitchChart.test.tsx
webapp/src/components/: PitchChart.tsx  TouchPad.tsx
webapp/src/lib/: audioMath.ts  idle.ts  keypad.ts  wav.ts
