[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tune-coach"
version = "0.1.0"
description = "Real-time jianpu pitch trace for singing practice (macOS MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "sounddevice>=0.4.6",
  "PySide6>=6.6",
  "pyqtgraph>=0.13.3",
  "librosa>=0.10.2",
  "soundfile>=0.12.1",
  "pyworld>=0.3.3",
]

[project.scripts]
tune-coach = "tune_coach.__main__:main"
